@@ -22,6 +22,7 @@
 
 #include <stdio.h>
 #include <ctype.h>
+#include <math.h>
 
 #ifdef HAVE_STDLIB_H
 #include <stdlib.h>
@@ -1951,10 +1952,10 @@ timelib_time *timelib_parse_from_format(char *format, char *string, int len, tim
 
 					TIMELIB_CHECK_NUMBER;
 					tptr = ptr;
-					if ((f = timelib_get_nr((char **) &ptr, 6)) == TIMELIB_UNSET || ptr - tptr != 6) {
+					if ((f = timelib_get_nr((char **) &ptr, 6)) == TIMELIB_UNSET || (ptr - tptr < 1)) {
 						add_pbf_error(s, "A six digit millisecond could not be found", string, begin);
 					} else {
-						s->time->f = (f / 1000000);
+						s->time->f = (f / pow(10, (ptr - tptr)));
 					}
 				}
 				break;
